#856 Tidy up the page-type rename fallout and drop a redundant list copy